@@ -1,18 +1,14 @@
-FROM openjdk:8 AS TEMP_BUILD_IMAGE
-ENV APP_HOME=/usr/app/
-WORKDIR $APP_HOME
-COPY build.gradle settings.gradle gradlew $APP_HOME
-COPY gradle $APP_HOME/gradle
-RUN chmod +x gradlew
-RUN ./gradlew build || return 0 
-COPY . .
-RUN chmod +x gradlew
-RUN ./gradlew build
+FROM gradle:6.0.1-jdk8-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon 
 
-FROM openjdk:8
-ENV ARTIFACT_NAME=ExteBackendApplication.jar
-ENV APP_HOME=/usr/app/
-WORKDIR $APP_HOME
-COPY --from=TEMP_BUILD_IMAGE $APP_HOME/build/libs/$ARTIFACT_NAME .
+FROM openjdk:8-jre-slim
+
 EXPOSE 8080
-CMD ["java","-jar",$ARTIFACT_NAME]
+
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/ExteBackendApplication.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/ExteBackendApplication.jar"]
